--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,8 @@
 
 *.cs text eol=crlf
 
+idk
+
 ###############################################################################
 # diff behavior for common document formats
 # 
